syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Order {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message CreateOrderRequest {
  string id = 1;
  double price = 2;
  double tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message Blank {}

message ListOrdersResponse {
  int32 quantity = 1;
  repeated Order orders = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(Blank) returns (ListOrdersResponse);
}